--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -107,7 +107,7 @@ main {
 section {
     display: grid;
     grid-template-columns: 1fr;
-    padding: 1em 3em;
+    padding: 1em 2em;
     justify-items: center;
 }
 
@@ -143,9 +143,35 @@ main section ul li {
     margin: 0.5em;
 }
 
+.fantastic-playroom {
+    width: 100%;
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+}
+
+.fantastic-playroom img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 3em;    
+}
+
 .youtube {
-    width: inherit;
-    display: flex;
+    width: 100%;
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+}
+
+.youtube iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 footer h6 {
