--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -45,6 +45,7 @@ nav {
     flex-wrap: wrap;
     position: sticky;
     top: 0;
+    z-index: 1;
 }
 
 /* Review understanding of this setup (margin-right: auto) in a flex container */
@@ -202,26 +203,37 @@ main section ul li {
 }
 
 .fantastic-playroom {
+    display: flex;
+    justify-content: center;
+}
+
+.fantastic-playroom img {
+    width: 80%;
+    border-radius: 3em;
+}
+
+/* .fantastic-playroom {
     width: 100%;
     position: relative;
     padding-bottom: 56.25%;
     height: 0;
-}
+} */
 
-.fantastic-playroom img {
+/* .fantastic-playroom img {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     border-radius: 3em;    
-}
+} */
 
 .youtube {
     width: 100%;
     position: relative;
     padding-bottom: 56.25%;
     height: 0;
+    z-index: 0;
 }
 
 .youtube iframe {
