Reset padding on nav to 1em 2em

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -35,7 +35,7 @@ body {
 }
 
 nav {
-    padding: 1em;
+    padding: 1em 2em;
     background: linear-gradient(90deg, #e3ffe7 0%, #d9e7ff 100%);
     /* Alternate nav */
     display: flex;
