--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -35,9 +35,15 @@ body {
     /* background: linear-gradient(90deg, #00d2ff 0%, #3a47d5 100%); */
 }
 
+.site-container {
+    display: grid;
+    grid-template-columns: 1fr;
+}
+
 nav {
     padding: 1em 2em;
-    background: linear-gradient(90deg, #e3ffe7 0%, #d9e7ff 100%);
+    background: #d9e7ff;
+    /* background: linear-gradient(90deg, #e3ffe7 0%, #d9e7ff 100%); */
     /* Alternate nav */
     display: flex;
     justify-content: space-between;
@@ -47,6 +53,11 @@ nav {
     position: sticky;
     top: 0;
     z-index: 1;
+    border-color: whitesmoke;
+    border-width: 0.125em;
+    border-bottom-style: dashed;
+    /* border-bottom-left-radius: 4em; */
+    /* border-bottom-right-radius: 4em; */
 }
 
 /* Review understanding of this setup (margin-right: auto) in a flex container */
@@ -63,6 +74,9 @@ nav a {
     border-radius: 0.25em;
     font-family: 'Ribeye Marrow', cursive;
     margin: 0 1.5em;
+    /* border-width: 0.125em; */
+    /* border-style: dashed; */
+    /* border-color: rgb(101, 101, 230); */
 }
 
 nav a:nth-child(1):hover {
@@ -72,6 +86,10 @@ nav a:nth-child(1):hover {
 nav a:hover {
     background-color: #679b1f;
     color: whitesmoke;
+    /* border-color: whitesmoke; */
+    /* border-width: 0.125em; */
+    /* border-style: dashed; */
+    /* border-color: whitesmoke; */
 }
 
 ul {
@@ -249,8 +267,90 @@ main section ul li {
     height: 100%;
 }
 
+.homepage {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr 3fr;
+    gap: 1em;
+    padding: 1em 3em;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    /* grid-template-columns: 1fr 3fr 3fr 3fr; */
+    align-items: center;
+    justify-content: space-between;
+    justify-items: center;
+    flex-wrap: wrap;
+    background: linear-gradient(90deg, whitesmoke 0%, #d9e7ff 100%);
+    /* background: linear-gradient(90deg, #e3ffe7 0%, #d9e7ff 100%); */
+    /* background-color: #d9e7ff; */
+    /* justify-content: space-between;     */
+}
+
+blockquote {
+    margin: 0;
+}
+
+#einstein, #gerber {
+    display: flex;
+    flex-wrap: wrap;
+    font-family: 'DM Sans', sans-serif;
+    min-width: 25ch;
+    width: 100%;
+    /* max-width: 30ch; */
+    background-color: whitesmoke;
+    padding: 2.5em;
+    border-color: #d9e7ff;
+    border-width: 0.25em;
+    /* border-style: dotted; */
+    border-style: dashed;
+    border-top-left-radius: 4em;
+    border-bottom-left-radius: 4em;
+    border-bottom-right-radius: 4em;
+    justify-content: flex-start;
+}
+
+#rainbow {
+    width: 100%;
+    padding: 0.25em;
+    display: flex;
+    justify-content: center;
+}
+
+#rainbow img {
+    width: 87%;
+    /* border-radius: 7em; */
+    /* border-color: #d9e7ff; */
+    border-color: whitesmoke;
+    border-width: 0.25em;
+    border-style: dashed;
+    border-top-left-radius: 4em;
+    /* border-bottom-left-radius: 4em; */
+    border-bottom-right-radius: 4em;
+}
+
+#giraffe {
+    width: 100%;
+    padding: 0.25em;
+    display: flex;
+    justify-content: center;
+}
+
+#giraffe img {
+    width: 75%;
+    /* border-radius: 7em; */
+    /* border-color: #d9e7ff; */
+    border-color: whitesmoke;
+    border-width: 0.25em;
+    border-style: dashed;
+    border-top-left-radius: 4em;
+    border-bottom-left-radius: 4em;
+    border-bottom-right-radius: 4em;
+}
+
 footer {
     padding: 1em;
+    /* background: #d9e7ff; */
     background: linear-gradient(90deg, #e3ffe7 0%, #d9e7ff 100%);
     display: flex;
     justify-content: center;
@@ -283,6 +383,29 @@ footer a {
     nav a:first-child {
         flex-basis: 100%;
         text-align: center;
+    }
+}
+
+@media (max-width: 950px) {
+
+    .homepage {
+        grid-template-columns: 1fr;
+    }
+
+    #rainbow img {
+        width: 67%;
+        /* border-radius: 7em; */
+        border-top-left-radius: 4em;
+        border-bottom-left-radius: 4em;
+        border-bottom-right-radius: 4em;
+    }
+
+    #giraffe img {
+        width: 55%;
+        /* border-radius: 7em; */
+        border-top-left-radius: 4em;
+        border-bottom-left-radius: 4em;
+        border-bottom-right-radius: 4em;
     }
 }
 
