Created new class for and reduced img size of hero img on curriculum page

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -232,6 +232,16 @@ main section ul li {
     border-radius: 3em;
 }
 
+.ece-curriculum {
+    display: flex;
+    justify-content: center;
+}
+
+.ece-curriculum img {
+    width: 50%;
+    border-radius: 3em;
+}
+
 /* .fantastic-playroom {
     width: 100%;
     position: relative;
