Reduce media query from max-width 750px to 675px

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -487,6 +487,22 @@ footer a {
         flex-wrap: nowrap;
         /* position: static; */
     }
+
+    #rainbow img {
+        width: 47%;
+        /* border-radius: 7em; */
+        border-top-left-radius: 4em;
+        border-bottom-left-radius: 4em;
+        border-bottom-right-radius: 4em;
+    }
+
+    #giraffe img {
+        width: 35%;
+        /* border-radius: 7em; */
+        border-top-left-radius: 4em;
+        border-bottom-left-radius: 4em;
+        border-bottom-right-radius: 4em;
+    }
 }
 
 /* @media (max-width: 730px) {
