--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -476,6 +476,19 @@ footer a {
     }
 }
 
+@media (max-width: 750px) {
+
+    #home {
+        margin: 0;
+    }
+
+    nav {
+        flex-direction: column;
+        align-items: center;
+        flex-wrap: nowrap;
+    }
+}
+
 @media (max-width: 700px) {
     .preview-posts {
         display: grid;
