--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -31,7 +31,7 @@ body {
     /* background: linear-gradient(90deg, #00d2ff 0%, #3a47d5 100%); */
 }
 
-.site-container {
+#site-container {
     display: grid;
     grid-template-columns: 1fr;
 }
